refactor: migrate to reactive programming with Spring WebFlux and MongoDB using agents and vide-coding