@@ -2,21 +2,19 @@ package com.mitocode.controller;
 
 import com.mitocode.dto.CategoryDTO;
 import com.mitocode.dto.GenericResponse;
-import com.mitocode.model.Category;
+import com.mitocode.mapper.CategoryMapper;
 import com.mitocode.service.ICategoryService;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Qualifier;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+import reactor.core.publisher.Mono;
 
 import java.net.URI;
-import java.util.Arrays;
 import java.util.List;
-import org.springframework.web.bind.annotation.GetMapping;
 
-
+@Slf4j
 @RestController
 @RequestMapping("/categories")
 @RequiredArgsConstructor
@@ -24,56 +22,42 @@ import org.springframework.web.bind.annotation.GetMapping;
 public class CategoryController {
 
     private final ICategoryService service;
-    @Qualifier("defaultMapper")
-    private final ModelMapper modelMapper;
-
+    private final CategoryMapper categoryMapper;
 
     @GetMapping
-    public ResponseEntity<GenericResponse<CategoryDTO>> getAllCategories() {        
-        List<CategoryDTO> list = service.findAll().stream().map(this::convertToDto).toList();
-
-        return ResponseEntity.ok(new GenericResponse<>(200, "success", list));
+    public Mono<ResponseEntity<GenericResponse<CategoryDTO>>> getAllCategories() {
+        log.info("GET /categories");
+        return service.findAll()
+                .map(categoryMapper::toDto)
+                .collectList()
+                .map(list -> ResponseEntity.ok(new GenericResponse<>(200, "success", list)));
     }
 
-
     @GetMapping("/{id}")
-    public ResponseEntity<GenericResponse<CategoryDTO>> getCategoryById(@PathVariable("id") Integer id) {
-        Category obj = service.findById(id);
-
-        return ResponseEntity.ok(new GenericResponse<>(200, "success", Arrays.asList(convertToDto(obj))));
+    public Mono<ResponseEntity<GenericResponse<CategoryDTO>>> getCategoryById(@PathVariable String id) {
+        log.info("GET /categories/{}", id);
+        return service.findById(id)
+                .map(obj -> ResponseEntity.ok(new GenericResponse<>(200, "success", List.of(categoryMapper.toDto(obj)))));
     }
 
     @PostMapping
-    public ResponseEntity<Void> save(@RequestBody CategoryDTO dto) {
-        Category obj = service.save(convertToEntity(dto));
-
-        URI location = ServletUriComponentsBuilder.fromCurrentRequest().path("/{id}").buildAndExpand(obj.getIdCategory()).toUri();
-
-        return ResponseEntity.created(location).build();
+    public Mono<ResponseEntity<Void>> save(@Valid @RequestBody CategoryDTO dto) {
+        log.info("POST /categories");
+        return service.save(categoryMapper.toEntity(dto))
+                .map(saved -> ResponseEntity.created(URI.create("/categories/" + saved.getIdCategory())).build());
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<GenericResponse<CategoryDTO>> update(@PathVariable("id") Integer id, @RequestBody CategoryDTO dto) {
-        //category.setIdCategory(id);
-        Category obj = service.update(id, convertToEntity(dto));
-
-        return ResponseEntity.ok(new GenericResponse<>(200, "success", Arrays.asList(convertToDto(obj))));
+    public Mono<ResponseEntity<GenericResponse<CategoryDTO>>> update(@PathVariable String id, @Valid @RequestBody CategoryDTO dto) {
+        log.info("PUT /categories/{}", id);
+        return service.update(id, categoryMapper.toEntity(dto))
+                .map(obj -> ResponseEntity.ok(new GenericResponse<>(200, "success", List.of(categoryMapper.toDto(obj)))));
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> delete(@PathVariable("id") Integer id) {
-        service.delete(id);
-
-        return ResponseEntity.noContent().build();
+    public Mono<ResponseEntity<Void>> delete(@PathVariable String id) {
+        log.info("DELETE /categories/{}", id);
+        return service.delete(id)
+                .then(Mono.just(ResponseEntity.noContent().build()));
     }
-
-
-    private CategoryDTO convertToDto(Category obj) {
-        return modelMapper.map(obj, CategoryDTO.class);
-    }
-
-    private Category convertToEntity(CategoryDTO dto) {
-        return modelMapper.map(dto, Category.class);
-    }
-
 }
